

if(BOAT_PROTOCOL_USE_HLFABRIC OR BOAT_PROTOCOL_USE_CHAINMAKER  OR BOAT_PROTOCOL_USE_HWBCS)
add_subdirectory(http2intf)
endif()

if(BOAT_PROTOCOL_USE_ETHEREUM OR BOAT_PROTOCOL_USE_FISCOBCOS OR BOAT_PROTOCOL_USE_PLATON OR BOAT_PROTOCOL_USE_PLATONE OR BOAT_PROTOCOL_USE_QUORUM OR BOAT_PROTOCOL_USE_VENACHAIN)
add_subdirectory(web3intf)
endif()